--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Database SQLite</string>
+    <string name="sqlite_intro">SQLite Intro</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="add">Add</string>
+    <string name="read">Read</string>
+    <string name="clear">Clear</string>
 </resources>
