сейчас с помощью сгруппированных операций в кастомные методы: подключаемся к бд, очищаем таблицу, вставляем строку со значением, выводим все в лог и отключаемся - подготовка к разбору примера о Transaction ...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="selecting">Selecting</string>
     <string name="sort">Sort</string>
     <string name="sqlite_joins">SQLite joins</string>
+    <string name="transactions">Transactions</string>
 </resources>
