--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="sort">Sort</string>
     <string name="sqlite_joins">SQLite joins</string>
     <string name="transactions">Transactions</string>
+    <string name="insert_transactions">Insert Transactions</string>
+    <string name="time">Time:" "</string>
+    <string name="insert">Insert</string>
 </resources>
